Fix styling issue with Notepad scrollbars

--- a/src/components/apps/NotepadApp/NotepadApp.css
+++ b/src/components/apps/NotepadApp/NotepadApp.css
@@ -12,4 +12,5 @@
     font-size: 13px;
     line-height: 1;
     letter-spacing: 0px;
+    overflow: scroll;
 }
